# TFOS

./: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  README.md  check_multiboot.sh  gdb.txt  grub.cfg  kernel.c  linker.ld  linker_multiboot.ld  multibootTest.sh  rust-toolchain.toml  set_kernel_size.sh  startISO.sh
.cargo/: config.toml
bootloader/: disk_load.asm  gdt.asm  kernel_len.asm  mbr.asm  switch_32_bit.asm
include/: io.h  registers.h  terminal.h  vga.h
include/hardcodes/: hardcode_vga.h
include/interrupts/: idt_gate.h
include/libc/: string.h
include/output/: terminal.h  vga.h
include/trash/kernel/: tty.h  vga.h
kernel/: boot_multiboot.S  boot_multiboot.asm  kernel.rs  kernel_entry.asm  kernel_entry.c  kernel_entry_multiboot.asm  kernel_main.c  multiboot2_header.asm  multiboot_header.asm
kernel/include/: terminal.h
kernel/include/hardcodes/: hc_serial.h  interrupts.h  kernel.h  vga.h
kernel/include/interrupts/: idt_gate.h  idt_register.h
kernel/include/kernel/: interrupts.h  io.h  kernel.h  keyboard.h  memory.h  monnos.h  serial.h  string.h  syscall.h  utility.h  vga.h
kernel/include/kernel/interrupts/: isrs.h
kernel/include/kernel/keyboard/: keymaps.h
kernel/include/kernel/monnos/: loglevels.h
kernel/include/libc/: stdio.h  string.h
kernel/monnos/: asm.rs
kernel/monnos/io/: port.rs
kernel/old/src/: dummy.cpp  main.c
kernel/old/src/interrupts/: isr_handler.cpp
kernel/old/src/interrupts/idt_gate/: set_idt_gate.cpp
kernel/old/src/libc/string/: itoa.c
kernel/old/src/terminal/: print.cpp  setVGA.cpp
kernel/old/src/vga/: cursor.cpp  vga.cpp
kernel/src/: kernel_main.c  main.cpp
kernel/src/interrupts/: isr.asm  load_idt.cpp
kernel/src/interrupts/idt_gate/: set_idt_gate.cpp
kernel/src/io/: in_out.cpp
kernel/src/kernel/: memory.c  serial.c  string.c  vga.c  vga_font.c
kernel/src/kernel/interrupts/: interrupts.c  isr.asm  isr_handler.c  isr_install.c  load_idt.c  set_idt_gate.c
kernel/src/kernel/kernel/: kernel.c
kernel/src/kernel/monnos/: loglevels.c  monnos.c  printk.c
kernel/src/kernel/syscall/: syscall.c  syscall_register.c
kernel/src/keyboard/: keyboard.c
kernel/src/keyboard/keymaps/: keymap_de.c  keymap_us.c
kernel/src/libc/string/: strlen.c
kernel/src/terminal/: setCursor.cpp
kernel/src/vga/: color.cpp  put.cpp
old/: CMakeLists.txt  startISO.sh
old/Bootloader/: CMakeLists.txt
old/Bootloader/src/: mbr.asm
old/Kernel/: CMakeLists.txt
old/include/: terminal.h
old/src/: kernel_main.c
scripts/multiboot/: check_multiboot.sh  grub.cfg  mkiso.sh
scripts/multiboot2/: grub.cfg
scripts/testboot/: grub.cfg  mkiso.sh
src/: boot_multiboot.asm  kernel.rs  main.c  main.cpp  monnos.rs
src/interrupts/: isr.asm  isr_handler.c  isr_handler.cpp  isr_install.cpp  load_idt.cpp
src/interrupts/idt_gate/: set_idt_gate.c
src/io/: in_out.cpp
src/kernel/: kernel.c  kernel.cpp  tty.h  vga.h
src/kernel/tty/: tty.c  tty.cc
src/kernel/vga/: vga.c  vga.cpp
src/libc/stdio/: printf.c  printf.cc
src/libc/string/: strlen.cpp
src/monnos/: arch.rs  asm.rs  drivers.rs  interrupts.rs  io.rs  log.rs  memory.rs  multiboot.rs  panic.rs  util.rs
src/monnos/arch/: x86.rs
src/monnos/drivers/: network.rs  uart.rs
src/monnos/drivers/network/: e1000.rs
src/monnos/interrupts/: int_x86.rs  irq_x86.asm
src/monnos/io/: mmio.rs  pci.rs  port.rs
src/monnos/io/pci/: configuration.rs  strings.rs
src/monnos/io/pci/configuration/: deviceheader.rs
src/monnos/multiboot/: info.rs
src/monnos/multiboot/info/: memory_map.rs  module.rs
src/output/terminal/: terminal.cpp  terminal_clear.cpp  terminal_init.cpp  terminal_print.cpp
src/output/vga/: vga.cpp  vga_putCharAt.cpp  vga_setColor.cpp
src/terminal/: print.cpp  setSize.cpp
src/vga/: clear.cpp  cursor.cpp  init.cpp
