[package]
name = "monnos"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]
path = "src/kernel.rs"

[profile.dev]
debug = true
opt-level = 'z'   # Optimize for size
lto = true        # Enable link-time optimization
codegen-units = 1 # Reduce number of codegen units to increase optimizations
panic = 'abort'   # Abort on panic
strip = true      # Strip symbols from binary

[dependencies]
log = "0.4.22"
x86 = "0.52.0"
